# robotics_math_library

./: CMakeLists.txt  README.md
include/: rob_math.h
src/: main.cpp  rob_math.cpp
